# ocaml_tg_test

./: README.md  dune-project  td_cpp.opam  td_cpp.opam.template  td_demo.opam
config/: discover.ml  dune
lib/: dune  mystubs.cpp  td_demo_lib.ml
test/: dune
